<resources>
    <string name="app_name">NDOE Data Collection App</string>
    <string name="label_school_accreditation">School Accreditation</string>
    <string name="label_settings">Settings %1$s(%2$d)</string>
    <string name="label_create_survey">Create new survey</string>
    <string name="criteria_name">Criteria, %1$d.%2$d: %3$s.</string>
    <string name="category_name" formatted="false">Standard %1$d: %2$s</string>
    <string name="criteria_progress">%1$d/%2$d</string>
    <string name="criteria_char_icon_pattern">%1$s.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_education_survey_tool">Education survey tool</string>
    <string name="title_education_survey_tool">Education\nsurvey tool</string>
    <string name="navigation_drawer_open" translatable="false">DRAWER_OPEN</string>
    <string name="navigation_drawer_close" translatable="false">DRAWER_CLOSE</string>
    <string name="header_school_accreditation">Recent Surveys</string>
    <string name="header_choose_category">Choose category</string>
    <string name="header_choose_standard">Choose standard</string>
    <string name="action_search">Search</string>
    <string name="write_school">Enter the school</string>
    <string name="criteria_hint">For detailed information, make a long touch on interested item</string>
    <string name="action_settings">Settings</string>
    <string name="title_warning">Warning</string>
    <string name="title_error">Error</string>
    <string name="error_network">Network problem</string>
    <string name="error_auth">Authentication failed</string>
    <string name="error_export">Survey exporting failed</string>
    <string name="error_import">Survey importing failed</string>
    <string name="error_picker">Picker action failed</string>
    <string name="error_any">Some error occurred</string>
    <string name="error_parse">Failed to parse file</string>
    <string name="warn_unable_to_update_answer">Unable to update answer</string>
    <string name="warn_unable_to_create_answer">Unable to create answer</string>
    <string name="warn_unable_to_load_recent_surveys">Unable to load recent surveys</string>
    <string name="warn_unable_to_get_schools">Unable to get schools</string>
    <string name="warn_failed_to_load_assets">Failed to load schools and survey from assets. You can load it from Settings screen</string>
    <string name="title_choose_school">Choose school</string>
    <string name="title_school_accreditation">School Accreditation</string>
    <string name="title_school_data_verification">School Data Verification</string>
    <string name="title_monitoring_and_evaluation">Monitoring and Evaluation</string>
    <string name="title_water_sanitation_and_hygiene">Water, Sanitation and Hygiene</string>
    <string name="title_drive_open_file">Choose file to import</string>
    <string name="survey_report">Survey report %1$s</string>
    <string name="title_upload">Upload report &#8230;</string>
    <string name="title_select_folder">Select folder</string>
    <string name="title_select_file">Select file</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="title_choose_icon">Choose your icon</string>
    <string name="title_connected_accounts">Connected accounts</string>
    <string name="title_connect_accounts">Connect accounts</string>
    <string name="action_change_it">Change it</string>
    <string name="action_connect">Connect</string>
    <string name="default_image">Default image</string>
    <string name="account_drive">Google Drive account</string>
    <string name="account_dropbox">Dropbox account</string>
    <string name="action_import_schools">Import schools</string>
    <string name="action_import_surveys">Import survey</string>
    <string name="action_export_folder">Export folder</string>
    <string name="integration_drive">Google Drive integration</string>
    <string name="integration_dropbox">Dropbox integration</string>
    <string name="default_export">Default for Export</string>
    <string name="change_default_export">Change to default for Export</string>
    <string name="hint_settings">Connect your cloud accounts for import/export school lists or surveys</string>
    <string name="toast_import_schools_success">Schools successfully imported</string>
    <string name="toast_import_survey_success">Survey successfully imported</string>
    <string name="button_comment">Comment</string>
    <string name="title_comment">Comment</string>
    <string name="button_submit">Submit</string>
    <string name="error_take_picture">Unable to get picture</string>
    <string name="error_save_logo">Unable to save logo</string>
    <string name="first_criteria">C1</string>
    <string name="second_criteria">C2</string>
    <string name="third_criteria">C3</string>
    <string name="forth_criteria">C4</string>
    <string name="first_subcriteria">SC1</string>
    <string name="second_subcriteria">SC2</string>
    <string name="third_subcriteria">SC3</string>
    <string name="forth_subcriteria">SC4</string>
    <string name="fifth_subcriteria">SC5</string>
    <string name="title_total">Total</string>
    <string name="title_total_by_standards">Total by Standards</string>
    <string name="summary">Summary</string>
    <string name="more_photos_pattern">+%1$d</string>
    <string name="label_attached_photos">Attached photos</string>
    <string name="menu_item_confirm">Confirm</string>
    <string name="coming_soon">Coming soon</string>
    <string name="format_standard">Standard %1$s:</string>
    <string name="format_criteria">Criteria %1$s:</string>
    <string name="format_subcriteria">Sub-criteria %1$s:</string>

    <string name="title_delete_confirmation">Confirm Removal</string>
    <string name="survey_delete_confirmation">Are you sure you want to remove the survey?</string>
    <string name="school_delete_confirmation">Are you sure you want to remove the school?</string>

    <string name="font_normal">sans-serif</string>
    <string name="font_medium">sans-serif-medium</string>
    <string name="font_light">sans-serif-light</string>
    <string name="font_black">sans-serif-black</string>

    <string name="transition_tag_fullscreen_image">transition_tag_fullscreen_image</string>
    <string name="transition_tag_splash_title">transition_tag_splash_title</string>
    <string name="transition_tag_splash_logo">transition_tag_splash_logo</string>

    <string name="title_report">School Accreditation Status Report</string>
    <string name="title_report_short">Report</string>
    <string name="label_recommendations">Recommendations</string>

    <string name="title_school_accreditation_level">School Accreditation Level</string>
    <string name="label_total_score">Total Score</string>
    <string name="report_level_1">Level 1</string>
    <string name="report_level_1_determination">Not meeting the standards</string>
    <string name="report_level_1_determination_source">Special measure</string>
    <string name="report_level_2">Level 2</string>
    <string name="report_level_2_determination">Meeting minimum standards</string>
    <string name="report_level_2_determination_source">National Certificate of Accreditation</string>
    <string name="report_level_3">Level 3</string>
    <string name="report_level_3_determination">Meeting the benchmark</string>
    <string name="report_level_3_determination_source">National Special Certificate of Achievement</string>
    <string name="report_level_4">Level 4</string>
    <string name="report_level_4_determination">Exceeding the benchmark</string>
    <string name="report_level_4_determination_source">National Special Certificate of Achievement</string>
    <string name="title_evaluation_forms">Evaluation Forms</string>
    <string name="title_obtained_score">Obtained Score</string>
    <string name="title_multiplier">Multiplier</string>
    <string name="title_final_score">Final Score</string>
    <string name="title_determination_of_overall_level">Determination of Overall Level: </string>

    <string name="evaluation_form_school_evaluation">School Evaluation</string>
    <string name="evaluation_form_classroom_observation">Classroom Observation</string>

    <string name="label_school_code">School Code: </string>
    <string name="label_date_of_accreditation">Date of Accreditation Visit: </string>
    <string name="label_school_name">School Name: </string>
    <string name="label_principal_name">Name of School Principal: </string>
    <string name="label_level_legend">Level Legend</string>
    <string name="above">Above</string>
    <string name="toast_set_app_context_success">App context changed</string>
    <string name="title_app_context">Application Context (0-FCM, 1-RMI)</string>

</resources>
