<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/SchoolAccreditationTableBackground"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textview_name"
        style="@style/SchoolAccreditationTableCell.Name"
        android:text="@string/title_evaluation_forms" />

    <TextView
        android:id="@+id/textview_obtained_score"
        style="@style/SchoolAccreditationTableCell.Item"
        android:text="@string/title_obtained_score" />

    <TextView
        android:id="@+id/textview_multiplier"
        style="@style/SchoolAccreditationTableCell.Item"
        android:text="@string/title_multiplier" />

    <TextView
        android:id="@+id/textview_final_score"
        style="@style/SchoolAccreditationTableCell.Item"
        android:text="@string/title_final_score" />

</LinearLayout>