<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_splash_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash_gradient"
    android:orientation="vertical"
    tools:context=".ui.screens.splash.SplashStartActivity">

    <TextView
        android:id="@+id/textview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:fontFamily="@string/font_light"
        android:gravity="center"
        android:text="@string/title_education_survey_tool"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_splash_title_end"
        android:transitionName="@string/transition_tag_splash_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <fm.doe.national.ui.custom_views.SquareRelativeLayout
            android:id="@+id/layout_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageview_logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_splash_logo"
                tools:ignore="ContentDescription"
                android:transitionName="@string/transition_tag_splash_logo" />

        </fm.doe.national.ui.custom_views.SquareRelativeLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <com.omega_r.libs.omegarecyclerview.OmegaRecyclerView
        android:id="@+id/recyclerview_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:dividerHeight="1dp"
        android:theme="@style/ThemeRecyclerViewSplashMenu"
        android:visibility="visible"
        app:alphaDivider="0.25"
        app:dividerPadding="24dp"
        app:layoutManager="LinearLayoutManager"
        app:dividerShow="end|middle"
        tools:listitem="@layout/item_menuitem" />

</LinearLayout>