<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_splash_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash_gradient"
    tools:context=".ui.screens.splash.SplashStartActivity">

    <LinearLayout
        android:id="@+id/layout_icon_and_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <TextView
            android:id="@+id/textview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_light"
            android:gravity="center"
            android:text="@string/title_education_survey_tool"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_splash_title_start"
            android:transitionName="@string/transition_tag_splash_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="47dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <fm.doe.national.accreditation.ui.custom_views.SquareRelativeLayout
                android:id="@+id/layout_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageview_logo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_splash_logo"
                    android:transitionName="@string/transition_tag_splash_logo"
                    tools:ignore="ContentDescription" />

            </fm.doe.national.accreditation.ui.custom_views.SquareRelativeLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar_long_loading"
        android:layout_width="49dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="8dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_icon_and_text" />

</androidx.constraintlayout.widget.ConstraintLayout>