<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageview_cloud_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_google_drive" />

    <TextView
        android:id="@+id/textview_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:textSize="20sp"
        android:textColor="@color/charcoal_grey"
        android:text="@string/account_drive"
        app:layout_constraintStart_toEndOf="@+id/imageview_cloud_icon"
        app:layout_constraintTop_toTopOf="@+id/imageview_cloud_icon"
        tools:text="Google Drive account" />

    <TextView
        android:id="@+id/textview_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:textColor="@color/charcoal_grey"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageview_cloud_icon"
        app:layout_constraintStart_toEndOf="@+id/imageview_cloud_icon"
        tools:text="nikita.ivanov@omega-r.com" />

    <TextView
        android:id="@+id/textview_export"
        style="@style/AccountTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/textview_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageview_cloud_icon"
        tools:text="Default to export" />

    <ImageView
        android:id="@+id/imegaview_done_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/textview_export"
        app:layout_constraintEnd_toStartOf="@+id/textview_export"
        app:layout_constraintTop_toTopOf="@+id/textview_export"
        app:srcCompat="@drawable/ic_done_mint" />

    <LinearLayout
        android:id="@+id/layout_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/imageview_cloud_icon">

        <TextView
            android:id="@+id/textview_import_schools"
            style="@style/ClickableListText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_import_schools" />

        <View style="@style/SettingsDelimeter"/>

        <TextView
            android:id="@+id/textview_import_survey"
            style="@style/ClickableListText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_import_surveys" />

        <View style="@style/SettingsDelimeter"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_folder_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                tools:text="MyDrive/MyFolder"
                android:layout_gravity="center_vertical|end"
                android:fontFamily="@string/font_light"
                android:textColor="@color/cool_grey"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/textview_choose_folder"
                style="@style/ClickableListText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_export_folder" />

        </FrameLayout>

        <View style="@style/SettingsDelimeter"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>