<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="48dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="24dp">

            <TextView
                android:id="@+id/textview_school_code_title"
                style="@style/ReportTextAppearance.Highlighted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_school_code" />

            <TextView
                android:id="@+id/textview_school_code"
                style="@style/ReportTextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textview_school_code_title"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/textview_school_code_title"
                tools:text="CHK001" />

            <TextView
                android:id="@+id/textview_visit_date_title"
                style="@style/ReportTextAppearance.Highlighted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview_school_code_title"
                android:text="@string/label_date_of_accreditation" />

            <TextView
                android:id="@+id/textview_visit_date_code"
                style="@style/ReportTextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textview_visit_date_title"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/textview_visit_date_title"
                tools:text="CHK001" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textview_school_name_title"
                style="@style/ReportTextAppearance.Highlighted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_school_name" />

            <TextView
                android:id="@+id/textview_school_name"
                style="@style/ReportTextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textview_school_name_title"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/textview_school_name_title"
                tools:text="CHK001" />

            <TextView
                android:id="@+id/textview_principal_name_title"
                style="@style/ReportTextAppearance.Highlighted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview_school_name_title"
                android:text="@string/label_principal_name" />

            <TextView
                android:id="@+id/textview_principal_name"
                style="@style/ReportTextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textview_principal_name_title"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/textview_principal_name_title"
                tools:text="CHK001" />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        style="@style/ReportTextAppearance.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/label_level_legend" />

    <com.omega_r.libs.omegarecyclerview.OmegaRecyclerView
        android:id="@+id/recyclerview_levels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="48dp"
        android:nestedScrollingEnabled="false"
        android:overScrollMode="never"
        tools:itemCount="4"
        tools:listitem="@layout/item_level_legend" />

</LinearLayout>