<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/drawer_menu_width"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:background="@drawable/bg_splash_gradient">

    <TextView
        android:id="@+id/textview_title"
        style="@style/TextViewNavigationDrawerHeader"
        android:layout_alignParentStart="true"
        android:text="@string/title_education_survey_tool"
        android:layout_marginTop="88dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageview_logo"
        android:layout_width="162dp"
        android:layout_height="162dp"
        android:layout_below="@+id/textview_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:src="@drawable/ic_splash_logo" />


    <com.omega_r.libs.omegarecyclerview.OmegaRecyclerView
        android:id="@+id/recyclerview_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:layout_above="@id/layout_bottom"
        android:layout_below="@+id/imageview_logo"
        android:theme="@style/ThemeRecyclerViewNavigationDrawer"
        app:layoutManager="LinearLayoutManager"
        app:dividerShow="end|middle"
        app:dividerPadding="20dp"
        app:dividerAlpha="0.25"
        android:dividerHeight="1dp"
        tools:listitem="@layout/item_menuitem" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/recyclerview_drawer"
        android:background="@color/drawer_delimeter"/>

    <RelativeLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="70dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textview_education_survey_tool"
            style="@style/TextViewNavigationDrawerFooter"
            android:layout_marginStart="24dp"
            android:text="@string/action_education_survey_tool"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/textview_settings"
            style="@style/TextViewNavigationDrawerFooter"
            android:layout_marginEnd="24dp"
            android:text="@string/action_settings"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>


</RelativeLayout>